--- a/gcn_config.json
+++ b/gcn_config.json
@@ -59,5 +59,23 @@
         "model_dir": "/opt/ml/level2_movierecommendation-recsys-09/saved/models/UltraGCN/0615_042159/",
         "submission_dir": "./submission/",
         "batch_size": 6807
+    },
+    "sweep_configuration": {
+        "method": "random",
+        "name": "sweep",
+        "metric": {
+            "goal": "minimize", 
+            "name": "val_loss"
+            },
+        "parameters": {
+            "arch;args;embedding_dim": {"values": [64, 128, 256]},
+            "arch;args;lambda": {"values": [0.4, 0.6, 0.8, 1.0, 1.2]},
+            "optimizer;args;lr": {"values": [0.001, 0.0005, 0.0001]}
+        }
+    },
+    "default": {
+            "arch;args;embedding_dim": 64,
+            "arch;args;lambda": 0.2,
+            "optimizer;args;lr": 0.01
     }
 }
