docs: change dataloader name

--- a/config/config_MVAE.json
+++ b/config/config_MVAE.json
@@ -13,7 +13,7 @@
         }
     },
     "data_loader": {
-        "type": "CARSDataLoader",
+        "type": "MultiVAEDataLoader",
         "args":{
             "data_dir": "/opt/ml/input/data/train/",
             "train_data" : "train_ratings.csv",
