--- a/ultragcn_config.json
+++ b/ultragcn_config.json
@@ -9,8 +9,8 @@
             "user_num": 31360,
             "item_num": 6807,
             "embedding_dim": 64,
-            "gamma": 1e-4,
-            "lambda": 0.8
+            "lambda": 0.8,
+            "delta": 1e-4
         }
     },
     "data_loader": {
@@ -27,7 +27,7 @@
     "optimizer": {
         "type": "Adam",
         "args":{
-            "lr": 0.001,
+            "lr": 1e-4,
             "weight_decay": 0,
             "amsgrad": true
         }
@@ -56,7 +56,7 @@
     },
     "test": {
         "data_dir": "/opt/ml/input/data/train/",
-        "model_dir": "/opt/ml/level2_movierecommendation-recsys-09/saved/models/UltraGCN/0615_042159/",
+        "model_dir": "/opt/ml/level2_movierecommendation-recsys-09/saved/models/UltraGCN/0619_170706/",
         "submission_dir": "./submission/",
         "batch_size": 6807
     },
@@ -70,12 +70,11 @@
         "parameters": {
             "arch;args;embedding_dim": {"values": [64, 128, 256]},
             "arch;args;lambda": {"values": [0.4, 0.6, 0.8, 1.0, 1.2]},
-            "optimizer;args;lr": {"values": [0.001, 0.0005, 0.0001]}
+            "optimizer;args;lr": {
+                "distribution": "uniform",
+                "min": 0.0001,
+                "max": 0.001
+            }
         }
-    },
-    "default": {
-            "arch;args;embedding_dim": 64,
-            "arch;args;lambda": 0.2,
-            "optimizer;args;lr": 0.01
     }
 }
