--- a/config/ultragcn_config.json
+++ b/config/ultragcn_config.json
@@ -1,6 +1,8 @@
 {   
     "name": "UltraGCN",
     "n_gpu": 1,
+    "wandb": false,
+    "wandb_sweep": false,
 
     "arch": {
         "type": "UltraGCN",
